--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Edguy/AdminPanel",
+  "name": "vandroy2/adminPanel",
   "description": "Admin panel",
   "minimum-stability": "stable",
   "license": "MIT",
