--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "vandroy2/admin-panel",
+  "name": "edguy/admin_panel",
   "description": "Admin panel",
   "minimum-stability": "stable",
   "license": "MIT",
